--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,248 @@
 db.sqlite3
 /.env
 /todo/frontend/node_modules/.cache/babel-loader/*.json
+/todo/frontend/node_modules/react-router-dom/es/BrowserRouter.js
+/todo/frontend/node_modules/react-router-dom/modules/BrowserRouter.js
+/todo/frontend/node_modules/react-router-dom/BrowserRouter.js
+/todo/frontend/node_modules/react-router/node_modules/isarray/build/build.js
+/todo/frontend/node_modules/hoist-non-react-statics/node_modules/react-is/build-info.json
+/todo/frontend/node_modules/react-router/node_modules/react-is/build-info.json
+/todo/frontend/node_modules/hoist-non-react-statics/CHANGELOG.md
+/todo/frontend/node_modules/react-router/node_modules/isarray/component.json
+/todo/frontend/node_modules/universal-cookie/cjs/Cookies.d.ts
+/todo/frontend/node_modules/universal-cookie/es6/Cookies.d.ts
+/todo/frontend/node_modules/universal-cookie/lib/Cookies.d.ts
+/todo/frontend/node_modules/universal-cookie/cjs/Cookies.js
+/todo/frontend/node_modules/universal-cookie/es6/Cookies.js
+/todo/frontend/node_modules/universal-cookie/lib/Cookies.js
+/todo/frontend/node_modules/history/es/createBrowserHistory.js
+/todo/frontend/node_modules/history/createBrowserHistory.js
+/todo/frontend/node_modules/history/es/createHashHistory.js
+/todo/frontend/node_modules/history/createHashHistory.js
+/todo/frontend/node_modules/history/es/createMemoryHistory.js
+/todo/frontend/node_modules/history/createMemoryHistory.js
+/todo/frontend/node_modules/react-router/modules/createNameContext.js
+/todo/frontend/node_modules/history/es/createTransitionManager.js
+/todo/frontend/node_modules/history/createTransitionManager.js
+/todo/frontend/node_modules/history/es/DOMUtils.js
+/todo/frontend/node_modules/history/DOMUtils.js
+/todo/frontend/node_modules/history/es/ExecutionEnvironment.js
+/todo/frontend/node_modules/history/ExecutionEnvironment.js
+/todo/frontend/node_modules/react-router/es/generatePath.js
+/todo/frontend/node_modules/react-router/modules/generatePath.js
+/todo/frontend/node_modules/react-router/generatePath.js
+/todo/frontend/node_modules/react-router-dom/es/generatePath.js
+/todo/frontend/node_modules/react-router-dom/generatePath.js
+/todo/frontend/node_modules/react-router-dom/es/HashRouter.js
+/todo/frontend/node_modules/react-router-dom/modules/HashRouter.js
+/todo/frontend/node_modules/react-router-dom/HashRouter.js
+/todo/frontend/node_modules/history/cjs/history.js
+/todo/frontend/node_modules/history/esm/history.js
+/todo/frontend/node_modules/history/umd/history.js
+/todo/frontend/node_modules/react-router/node_modules/path-to-regexp/History.md
+/todo/frontend/node_modules/history/cjs/history.min.js
+/todo/frontend/node_modules/history/umd/history.min.js
+/todo/frontend/node_modules/react-router/modules/HistoryContext.js
+/todo/frontend/node_modules/hoist-non-react-statics/dist/hoist-non-react-statics.cjs.js
+/todo/frontend/node_modules/hoist-non-react-statics/dist/hoist-non-react-statics.js
+/todo/frontend/node_modules/hoist-non-react-statics/dist/hoist-non-react-statics.min.js
+/todo/frontend/node_modules/react-router/modules/hooks.js
+/todo/frontend/node_modules/@types/cookie/index.d.ts
+/todo/frontend/node_modules/mini-create-react-context/dist/index.d.ts
+/todo/frontend/node_modules/react-router/node_modules/path-to-regexp/index.d.ts
+/todo/frontend/node_modules/tiny-warning/src/index.d.ts
+/todo/frontend/node_modules/universal-cookie/cjs/index.d.ts
+/todo/frontend/node_modules/universal-cookie/es6/index.d.ts
+/todo/frontend/node_modules/universal-cookie/lib/index.d.ts
+/todo/frontend/node_modules/universal-cookie/index.d.ts
+/todo/frontend/node_modules/history/index.js
+/todo/frontend/node_modules/hoist-non-react-statics/node_modules/react-is/index.js
+/todo/frontend/node_modules/hoist-non-react-statics/src/index.js
+/todo/frontend/node_modules/mini-create-react-context/dist/cjs/index.js
+/todo/frontend/node_modules/mini-create-react-context/dist/esm/index.js
+/todo/frontend/node_modules/react-router/modules/index.js
+/todo/frontend/node_modules/react-router/node_modules/isarray/index.js
+/todo/frontend/node_modules/react-router/node_modules/path-to-regexp/index.js
+/todo/frontend/node_modules/react-router/node_modules/react-is/index.js
+/todo/frontend/node_modules/react-router/index.js
+/todo/frontend/node_modules/react-router-dom/modules/index.js
+/todo/frontend/node_modules/react-router-dom/index.js
+/todo/frontend/node_modules/resolve-pathname/index.js
+/todo/frontend/node_modules/tiny-warning/src/index.js
+/todo/frontend/node_modules/universal-cookie/cjs/index.js
+/todo/frontend/node_modules/universal-cookie/es6/index.js
+/todo/frontend/node_modules/universal-cookie/lib/index.js
+/todo/frontend/node_modules/value-equal/index.js
+/todo/frontend/node_modules/mini-create-react-context/dist/cjs/index.min.js
+/todo/frontend/node_modules/@types/cookie/LICENSE
+/todo/frontend/node_modules/history/LICENSE
+/todo/frontend/node_modules/hoist-non-react-statics/node_modules/react-is/LICENSE
+/todo/frontend/node_modules/mini-create-react-context/LICENSE
+/todo/frontend/node_modules/react-router/node_modules/path-to-regexp/LICENSE
+/todo/frontend/node_modules/react-router/node_modules/react-is/LICENSE
+/todo/frontend/node_modules/react-router/LICENSE
+/todo/frontend/node_modules/react-router-dom/LICENSE
+/todo/frontend/node_modules/resolve-pathname/LICENSE
+/todo/frontend/node_modules/tiny-invariant/LICENSE
+/todo/frontend/node_modules/tiny-warning/LICENSE
+/todo/frontend/node_modules/universal-cookie/LICENSE
+/todo/frontend/node_modules/value-equal/LICENSE
+/todo/frontend/node_modules/hoist-non-react-statics/LICENSE.md
+/todo/frontend/node_modules/react-router/modules/Lifecycle.js
+/todo/frontend/node_modules/react-router-dom/es/Link.js
+/todo/frontend/node_modules/react-router-dom/modules/Link.js
+/todo/frontend/node_modules/react-router-dom/Link.js
+/todo/frontend/node_modules/history/es/LocationUtils.js
+/todo/frontend/node_modules/history/LocationUtils.js
+/todo/frontend/node_modules/react-router-dom/modules/utils/locationUtils.js
+/todo/frontend/node_modules/react-router/es/matchPath.js
+/todo/frontend/node_modules/react-router/modules/matchPath.js
+/todo/frontend/node_modules/react-router/matchPath.js
+/todo/frontend/node_modules/react-router-dom/es/matchPath.js
+/todo/frontend/node_modules/react-router-dom/matchPath.js
+/todo/frontend/node_modules/react-router/es/MemoryRouter.js
+/todo/frontend/node_modules/react-router/modules/MemoryRouter.js
+/todo/frontend/node_modules/react-router/MemoryRouter.js
+/todo/frontend/node_modules/react-router-dom/es/MemoryRouter.js
+/todo/frontend/node_modules/react-router-dom/MemoryRouter.js
+/todo/frontend/node_modules/react-router-dom/es/NavLink.js
+/todo/frontend/node_modules/react-router-dom/modules/NavLink.js
+/todo/frontend/node_modules/react-router-dom/NavLink.js
+/todo/frontend/node_modules/@types/cookie/package.json
+/todo/frontend/node_modules/history/package.json
+/todo/frontend/node_modules/hoist-non-react-statics/node_modules/react-is/package.json
+/todo/frontend/node_modules/hoist-non-react-statics/package.json
+/todo/frontend/node_modules/mini-create-react-context/package.json
+/todo/frontend/node_modules/react-router/node_modules/isarray/package.json
+/todo/frontend/node_modules/react-router/node_modules/path-to-regexp/package.json
+/todo/frontend/node_modules/react-router/node_modules/react-is/package.json
+/todo/frontend/node_modules/react-router/package.json
+/todo/frontend/node_modules/react-router-dom/package.json
+/todo/frontend/node_modules/resolve-pathname/package.json
+/todo/frontend/node_modules/tiny-invariant/package.json
+/todo/frontend/node_modules/tiny-warning/package.json
+/todo/frontend/node_modules/universal-cookie/package.json
+/todo/frontend/node_modules/value-equal/package.json
+/todo/frontend/node_modules/history/es/PathUtils.js
+/todo/frontend/node_modules/history/PathUtils.js
+/todo/frontend/node_modules/react-router/es/Prompt.js
+/todo/frontend/node_modules/react-router/modules/Prompt.js
+/todo/frontend/node_modules/react-router/Prompt.js
+/todo/frontend/node_modules/react-router-dom/es/Prompt.js
+/todo/frontend/node_modules/react-router-dom/Prompt.js
+/todo/frontend/node_modules/hoist-non-react-statics/node_modules/react-is/cjs/react-is.development.js
+/todo/frontend/node_modules/hoist-non-react-statics/node_modules/react-is/umd/react-is.development.js
+/todo/frontend/node_modules/react-router/node_modules/react-is/cjs/react-is.development.js
+/todo/frontend/node_modules/react-router/node_modules/react-is/umd/react-is.development.js
+/todo/frontend/node_modules/hoist-non-react-statics/node_modules/react-is/cjs/react-is.production.min.js
+/todo/frontend/node_modules/hoist-non-react-statics/node_modules/react-is/umd/react-is.production.min.js
+/todo/frontend/node_modules/react-router/node_modules/react-is/cjs/react-is.production.min.js
+/todo/frontend/node_modules/react-router/node_modules/react-is/umd/react-is.production.min.js
+/todo/frontend/node_modules/react-router/cjs/react-router.js
+/todo/frontend/node_modules/react-router/esm/react-router.js
+/todo/frontend/node_modules/react-router/umd/react-router.js
+/todo/frontend/node_modules/react-router/cjs/react-router.js.map
+/todo/frontend/node_modules/react-router/esm/react-router.js.map
+/todo/frontend/node_modules/react-router/umd/react-router.js.map
+/todo/frontend/node_modules/react-router/cjs/react-router.min.js
+/todo/frontend/node_modules/react-router/umd/react-router.min.js
+/todo/frontend/node_modules/react-router/cjs/react-router.min.js.map
+/todo/frontend/node_modules/react-router/umd/react-router.min.js.map
+/todo/frontend/node_modules/react-router-dom/cjs/react-router-dom.js
+/todo/frontend/node_modules/react-router-dom/esm/react-router-dom.js
+/todo/frontend/node_modules/react-router-dom/umd/react-router-dom.js
+/todo/frontend/node_modules/react-router-dom/cjs/react-router-dom.js.map
+/todo/frontend/node_modules/react-router-dom/esm/react-router-dom.js.map
+/todo/frontend/node_modules/react-router-dom/umd/react-router-dom.js.map
+/todo/frontend/node_modules/react-router-dom/cjs/react-router-dom.min.js
+/todo/frontend/node_modules/react-router-dom/umd/react-router-dom.min.js
+/todo/frontend/node_modules/react-router-dom/cjs/react-router-dom.min.js.map
+/todo/frontend/node_modules/react-router-dom/umd/react-router-dom.min.js.map
+/todo/frontend/node_modules/@types/cookie/README.md
+/todo/frontend/node_modules/history/README.md
+/todo/frontend/node_modules/hoist-non-react-statics/node_modules/react-is/README.md
+/todo/frontend/node_modules/hoist-non-react-statics/README.md
+/todo/frontend/node_modules/mini-create-react-context/README.md
+/todo/frontend/node_modules/react-router/node_modules/isarray/README.md
+/todo/frontend/node_modules/react-router/node_modules/react-is/README.md
+/todo/frontend/node_modules/react-router/README.md
+/todo/frontend/node_modules/react-router-dom/README.md
+/todo/frontend/node_modules/resolve-pathname/README.md
+/todo/frontend/node_modules/tiny-invariant/README.md
+/todo/frontend/node_modules/tiny-warning/README.md
+/todo/frontend/node_modules/universal-cookie/README.md
+/todo/frontend/node_modules/value-equal/README.md
+/todo/frontend/node_modules/react-router/node_modules/path-to-regexp/Readme.md
+/todo/frontend/node_modules/react-router/es/Redirect.js
+/todo/frontend/node_modules/react-router/modules/Redirect.js
+/todo/frontend/node_modules/react-router/Redirect.js
+/todo/frontend/node_modules/react-router-dom/es/Redirect.js
+/todo/frontend/node_modules/react-router-dom/Redirect.js
+/todo/frontend/node_modules/resolve-pathname/cjs/resolve-pathname.js
+/todo/frontend/node_modules/resolve-pathname/esm/resolve-pathname.js
+/todo/frontend/node_modules/resolve-pathname/umd/resolve-pathname.js
+/todo/frontend/node_modules/resolve-pathname/cjs/resolve-pathname.min.js
+/todo/frontend/node_modules/resolve-pathname/umd/resolve-pathname.min.js
+/todo/frontend/node_modules/react-router/es/Route.js
+/todo/frontend/node_modules/react-router/modules/Route.js
+/todo/frontend/node_modules/react-router/Route.js
+/todo/frontend/node_modules/react-router-dom/es/Route.js
+/todo/frontend/node_modules/react-router-dom/Route.js
+/todo/frontend/node_modules/react-router/es/Router.js
+/todo/frontend/node_modules/react-router/modules/Router.js
+/todo/frontend/node_modules/react-router/Router.js
+/todo/frontend/node_modules/react-router-dom/es/Router.js
+/todo/frontend/node_modules/react-router-dom/Router.js
+/todo/frontend/node_modules/react-router/modules/RouterContext.js
+/todo/frontend/node_modules/react-router/es/StaticRouter.js
+/todo/frontend/node_modules/react-router/modules/StaticRouter.js
+/todo/frontend/node_modules/react-router/StaticRouter.js
+/todo/frontend/node_modules/react-router-dom/es/StaticRouter.js
+/todo/frontend/node_modules/react-router-dom/StaticRouter.js
+/todo/frontend/node_modules/react-router/es/Switch.js
+/todo/frontend/node_modules/react-router/modules/Switch.js
+/todo/frontend/node_modules/react-router/Switch.js
+/todo/frontend/node_modules/react-router-dom/es/Switch.js
+/todo/frontend/node_modules/react-router-dom/Switch.js
+/todo/frontend/node_modules/tiny-invariant/dist/tiny-invariant.cjs.js
+/todo/frontend/node_modules/tiny-invariant/dist/tiny-invariant.d.ts
+/todo/frontend/node_modules/tiny-invariant/dist/tiny-invariant.esm.js
+/todo/frontend/node_modules/tiny-invariant/src/tiny-invariant.flow.js
+/todo/frontend/node_modules/tiny-invariant/dist/tiny-invariant.js
+/todo/frontend/node_modules/tiny-invariant/dist/tiny-invariant.min.js
+/todo/frontend/node_modules/tiny-invariant/src/tiny-invariant.ts
+/todo/frontend/node_modules/tiny-warning/dist/tiny-warning.cjs.js
+/todo/frontend/node_modules/tiny-warning/dist/tiny-warning.cjs.js.flow
+/todo/frontend/node_modules/tiny-warning/dist/tiny-warning.esm.js
+/todo/frontend/node_modules/tiny-warning/dist/tiny-warning.js
+/todo/frontend/node_modules/tiny-warning/dist/tiny-warning.min.js
+/todo/frontend/node_modules/universal-cookie/cjs/types.d.ts
+/todo/frontend/node_modules/universal-cookie/es6/types.d.ts
+/todo/frontend/node_modules/universal-cookie/lib/types.d.ts
+/todo/frontend/node_modules/universal-cookie/cjs/types.js
+/todo/frontend/node_modules/universal-cookie/es6/types.js
+/todo/frontend/node_modules/universal-cookie/lib/types.js
+/todo/frontend/node_modules/universal-cookie/umd/universalCookie.js
+/todo/frontend/node_modules/universal-cookie/umd/universalCookie.min.js
+/todo/frontend/node_modules/universal-cookie/cjs/utils.d.ts
+/todo/frontend/node_modules/universal-cookie/es6/utils.d.ts
+/todo/frontend/node_modules/universal-cookie/lib/utils.d.ts
+/todo/frontend/node_modules/universal-cookie/cjs/utils.js
+/todo/frontend/node_modules/universal-cookie/es6/utils.js
+/todo/frontend/node_modules/universal-cookie/lib/utils.js
+/todo/frontend/node_modules/value-equal/cjs/value-equal.js
+/todo/frontend/node_modules/value-equal/esm/value-equal.js
+/todo/frontend/node_modules/value-equal/umd/value-equal.js
+/todo/frontend/node_modules/value-equal/cjs/value-equal.min.js
+/todo/frontend/node_modules/value-equal/umd/value-equal.min.js
+/todo/frontend/node_modules/history/warnAboutDeprecatedCJSRequire.js
+/todo/frontend/node_modules/react-router/warnAboutDeprecatedCJSRequire.js
+/todo/frontend/node_modules/react-router-dom/warnAboutDeprecatedCJSRequire.js
+/todo/frontend/node_modules/history/es/warnAboutDeprecatedESMImport.js
+/todo/frontend/node_modules/react-router/es/warnAboutDeprecatedESMImport.js
+/todo/frontend/node_modules/react-router-dom/es/warnAboutDeprecatedESMImport.js
+/todo/frontend/node_modules/react-router/es/withRouter.js
+/todo/frontend/node_modules/react-router/modules/withRouter.js
+/todo/frontend/node_modules/react-router/withRouter.js
+/todo/frontend/node_modules/react-router-dom/es/withRouter.js
+/todo/frontend/node_modules/react-router-dom/withRouter.js
